--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>COHCR-CENTRE H&R LAB</title>
+<title>COHR-CENTRE H&R LAB</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Health medical template project">
@@ -62,7 +62,7 @@
 							<div class="col">
 								<div class="header_top_content d-flex flex-row align-items-center justify-content-start">
 									<div class="logo">
-										<a href="#">COHCR-CENTRE<span style="font-size: 0.9em"> H&R</span>LAB</a>	
+										<a href="#">COHR-CENTRE<span style="font-size: 0.9em"> H&R</span>LAB</a>	
 									</div>
 									<div class="header_top_extra d-flex flex-row align-items-center justify-content-start ml-auto">
 										<div class="header_top_nav">
