--- a/elements.html
+++ b/elements.html
@@ -59,7 +59,7 @@
 							<div class="col">
 								<div class="header_top_content d-flex flex-row align-items-center justify-content-start">
 									<div class="logo">
-										<a href="#">health<span>+</span></a>	
+										<a href="#">COHR-CENTRE<span style="font-size: 0.9em"> H&R</span>LAB</a>	
 									</div>
 									<div class="header_top_extra d-flex flex-row align-items-center justify-content-start ml-auto">
 										<div class="header_top_nav">
