--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 									<div class="header_top_extra d-flex flex-row align-items-center justify-content-start ml-auto">
 										<div class="header_top_nav">
 											<ul class="d-flex flex-row align-items-center justify-content-start">
-												<li><a href="#">Help Desk</a></li>
-												<li><a href="#">Emergency Services</a></li>
-												<li><a href="#">Appointment</a></li>
+												<li><a href="#">Social actions</a></li>
+												<li><a href="#">Humanitarian department</a></li>
+												<li><a href="#">Research unit</a></li>
 											</ul>
 										</div>
 										<div class="header_top_phone">
 											<i class="fa fa-phone" aria-hidden="true"></i>
-											<span>+34 586 778 8892</span>
+											<span>+237 650027659/696736322</span>
 										</div>
 									</div>
 									<div class="hamburger ml-auto"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -97,6 +97,7 @@
 													<li><a href="services.html">Services</a></li>
 													<li><a href="news.html">News</a></li>
 													<li><a href="contact.html">Contact</a></li>
+													<li><a href="help.html">Help Us</a></li>
 												</ul>
 											</nav>
 											<div class="search_content d-flex flex-row align-items-center justify-content-end ml-auto">
