--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<div class="col">
 						<div class="home_content">
 							<div class="home_title">We envision medical research focused on the suffering of today's world</div>
-							<div class="home_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien.</div>
+							<div class="home_text">All Together for better care.</div>
 							<div class="button home_button"><a href="#"><span>read more</span><span>read more</span></a></div>
 						</div>
 					</div>
