ajout des ancres vers les departements recherche et humanitaire

--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
 						<div class="home_content">
 							<div class="home_title">We envision medical research focused on the suffering of today's world</div>
 							<div class="home_text">All Together for better care.</div>
-							<div class="button home_button"><a href="#"><span>read more</span><span>read more</span></a></div>
 						</div>
 					</div>
 				</div>
@@ -142,9 +141,10 @@
 					<div class="info_box">
 						<div class="info_image"><img src="images/info_1.jpg" alt=""></div>
 						<div class="info_content">
-							<div class="info_title">Free Consultations</div>
-							<div class="info_text">Arcu neque, scelerisque eget ligula ac, congue tempor felis. Integer tempor, eros a egestas finibus, dolor risus mollis.</div>
-							<div class="button info_button"><a href="#"><span>read more</span><span>read more</span></a></div>
+							<div class="info_title">Humanitarian actions</div>
+							<div class="info_text">Its programmes include medical and social assistance, disaster relief in the case of armed conflicts and natural catastrophes, emergency services and first aid corps, help for the elderly, the handicapped and children in need and the provision of first aid training, and support for refugees and internally displaced persons regardless of race
+							</div>
+							<div class="button info_button"><a href="#humanitarian"><span>read more</span><span>read more</span></a></div>
 						</div>
 					</div>
 				</div>
@@ -154,9 +154,9 @@
 					<div class="info_box">
 						<div class="info_image"><img src="images/info_2.jpg" alt=""></div>
 						<div class="info_content">
-							<div class="info_title">Emergency Care</div>
-							<div class="info_text">Morbi arcu neque, scelerisque eget ligula ac, congue tempor felis. Integer tempor, eros a egestas finibus, dolor risus.</div>
-							<div class="button info_button"><a href="#"><span>read more</span><span>read more</span></a></div>
+							<div class="info_title">Research activities</div>
+							<div class="info_text">Feb. 11 is World Day of the Sick, A medical mission is then held on this occasion through all the day in the semi-urban community of Nyanka in the town of Douala, Cameroon. We organise on this occasion, every year since 2016 free medical consultations, screening of emerging non communicable diseases, distribution of essential foodstuffs...</div>
+							<div class="button info_button"><a href="#researchActivities"><span>read more</span><span>read more</span></a></div>
 						</div>
 					</div>
 				</div>
@@ -291,6 +291,52 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Humanitarian actions-->
+		<!-- Services -->
+
+		<div id="humanitarian">
+			<div class="container" style="height:90%">
+				<div class="row">
+					<div class="col text-center">
+						<div class="section_title" style="margin-top:30px; padding-top:50px;">Humanitarian actions</div>
+					</div>
+				</div>
+				<div class="row icon_boxes_row">
+						<div class="icon_box_title">Division of the World Day of the Sick</div>
+					<div>
+						<p>Feb. 11 is World Day of the Sick, A medical mission is then held on this occasion through all the day in the semi-urban community of Nyanka in the town of Douala, Cameroon. We organise on this occasion, every year since 2016 free medical consultations, screening of emerging non communicable diseases, distribution of essential foodstuffs, and animated presentation on a health topic. Thanks to the charisma and dynamism of Dr Patrick Tchebegna, we have been able to be represented in the organization of this meeting for 3 years already. 
+								Our motivation is that each of us is poor, needy, and destitute. When we are born, we require the care of our parents to survive, and at every stage of life, we remain in some way dependent on the help of others. We will always be conscious of our limitations, as creatures before other individuals and situations. A frank acknowledgment of this truth keeps us humble and spurs us to practice solidarity as an essential virtue in life.
+								</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- End Humanitarian-->
+		 <!--research activities-->
+		<div id="researchActivities">
+				<div class="container" style="height:90%">
+					<div class="row">
+						<div class="col text-center">
+							<div class="section_title" style="margin-top:30px; padding-top:50px;">Research activities</div>
+						</div>
+					</div>
+					<div class="row icon_boxes_row">
+						<div>
+							<ul>
+								<li> - encourage and support research to improve human health</li>
+								<li><p> - produce skilled researchers</p></li>
+								<li><p> - advance and disseminate knowledge and technology to improve the quality of life and economic competitiveness of the Cameroon</p></li>
+								<li><p> - promote dialogue with the public about medical research.</p></li>
+							</ul>
+							<p>Our work ranges from laboratory research, for example on genes and molecules, right through to research with people, such as clinical trials and population studies. Our science is split into six broad areas of research: infectious diseases of poverty, population and systems medicine, global health and african migrants diseases research.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<!-- End  research activities-->
 
 	<!-- Departments -->
 
